--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Persistencia">
         <activity
-            android:name=".MenuOpciones"
-            android:exported="true">
-
-        </activity>
+            android:name=".MenuUsuarioRegistrado"
+            android:exported="false" />
         <activity
-            android:name=".RegistroUsuarios"
+            android:name=".MenuOpciones"
             android:exported="true"></activity>
         <activity
+            android:name=".RegistroUsuarios"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
